--- a/style.css
+++ b/style.css
@@ -274,12 +274,12 @@
   /* Mobile Styles */
   @media (max-width: 1000px) {
     .header {
-      flex-direction: column;
+      flex-direction: row;
       align-items: stretch;
     }
 
     .product-card {
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
     }
 
